--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,9 +11,32 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:id="@+id/homeP"
         android:textSize="60dp"
         android:text="Home Page" />
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Enter Username"
+        android:layout_marginLeft="130dp"
+        android:layout_marginTop="100dp"
+        android:id="@+id/user"/>
 
+    <EditText
+        android:id="@+id/pass"
+        android:layout_width="wrap_content"
+        android:layout_marginTop="175dp"
+        android:layout_marginLeft="130dp"
+        android:layout_height="wrap_content"
+        android:hint="Enter Password" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Log in"
+        android:id="@+id/log"
+        android:layout_marginTop="250dp"
+        android:layout_marginLeft="150dp"/>
 
 
 </FrameLayout>
